CUI-1261 - fixing problem with text wrapping on draggable list item

--- a/components/contrib/draggable/styles/draggable.less
+++ b/components/contrib/draggable/styles/draggable.less
@@ -18,7 +18,7 @@
 @dropzone-border-color: @draggable-list-border-color;
 
 ul.draggable {
-  position: relative !important;
+  position: relative;
   padding: 0;
   margin: 0;
   
